@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version
 ---------------
 
+- Fixed missing time in msDrawMap logging (#3651)
+
 - Fixed Internal error with Oracle Spatial multi point geometries (#3627)
 
 - Fixed double free in shp2img.c (#3497)
